--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,11 @@
             "email": "aaron.lawrence@neondigital.co.uk"
         }
     ],
-    "require": {},
+    "require": {
+        "getcandy/admin": "^2.0",        
+        "livewire/livewire": "^2.0",
+        "php": "^8.0"
+    },
     "autoload" : {
         "psr-4": {
             "Aaronneondigital\\Storefront\\" : "src/"
